--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ description = "A command line app that uses your environment and command history
 chrono = "0.4.39"
 dotenv = "0.15.0"
 humantime = "2.1.0"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 rev_lines = "0.3.0"
 serde_json = "1.0.138"
-tokio = { version = "1", features = ["full"] }
